# ensnare

./: .gitignore  Cargo.toml  LICENSE  README-development.md  README.md  do-release  precheck  settings.json
.github/workflows/: build.yml  release.yml
assets-nodist/os/: minidaw.desktop
assets-nodist/scripts/: color-generator.py  sample-filenames.py
assets/patches/subtractive/: accordion.json  acid-bass.json  android-dreams.json  angels.json  aurora.json  bagpipes.json  banjo.json  bass-clarinet.json  bass-drum.json  bass-of-the-time-lords.json  bassoon.json  bell.json  bongos.json  brass-section.json  castanets.json  cat.json  celeste.json  celestial-wash.json  cello.json  choir.json  clap.json  clarinet.json  claves.json  clavichord.json  conch-shell.json  conga.json  contrabassoon.json  cowbell-analog.json  cowbell.json  cymbal.json  dark-city.json  debug-envelope.json  detroit-bass.json  deutsche-bass.json  didgeridoo.json  digital-alarm-clock.json  digital-bass.json  double-bass.json  dulcimer.json  electric-piano.json  (+63 more)
assets/patches/subtractive/quarantine/: octave-switch.json
crates/proc-macros/: Cargo.toml  README.md
crates/proc-macros/src/: control.rs  entity.rs  inner.rs  lib.rs  metadata.rs
crates/services/: Cargo.toml  README.md
crates/services/examples/: audio.rs  midi.rs
crates/services/src/: audio.rs  lib.rs  midi.rs  project.rs  traits.rs  types.rs
crates/toys/: Cargo.toml  README.md
crates/toys/src/: controllers.rs  effects.rs  factory.rs  instruments.rs  lib.rs
crates/toys/src/cores/: controllers.rs  effects.rs  instruments.rs  mod.rs  synth.rs
examples/: entity-gui-explorer.rs  hello-world-v1.rs  hello-world.rs  oscillator.rs  play-song.rs  render-project.rs  render.rs  subtractive-patch-converter.rs  subtractive-patch-explorer.rs  widget-explorer.rs
examples/minidaw/: README.md  events.rs  main.rs  menu.rs  minidaw.rs  settings.rs
examples/pocket-calculator/: calculator.rs  main.rs
res/tools/: generate-md-icons.py
src/: lib.rs  traits.rs  version.rs
src/automation/: automator.rs  controllers.rs  mod.rs  signal_path.rs  traits.rs  types.rs
src/composition/: arrangement.rs  composer.rs  mod.rs  note.rs  pattern.rs  sequencers.rs  types.rs
src/cores/: mod.rs  simple.rs
src/cores/controllers/: arpeggiator.rs  lfo.rs  mod.rs  passthrough.rs  simple.rs  test.rs  timer.rs  trigger.rs
src/cores/effects/: bitcrusher.rs  chorus.rs  compressor.rs  delay.rs  filter.rs  gain.rs  limiter.rs  mod.rs  reverb.rs  simple.rs  test.rs
src/cores/instruments/: drumkit.rs  fm.rs  mod.rs  sampler.rs  simple.rs  subtractive.rs  test.rs
src/egui/: audio.rs  colors.rs  controllers.rs  cursor.rs  effects.rs  entities.rs  generators.rs  glue.rs  grid.rs  indicators.rs  legend.rs  misc.rs  mod.rs  modulators.rs  placeholders.rs  project.rs  settings.rs  signal_chain.rs  track.rs  util.rs
src/egui/automation/: mod.rs  signal_path.rs
src/egui/chrome/: control_bar.rs  mod.rs  transport.rs
src/egui/composition/: arrangement.rs  carousel.rs  editor.rs  mod.rs
src/egui/instruments/: drumkit.rs  fm.rs  mod.rs  sampler.rs  subtractive.rs
src/elements/: generators.rs  mod.rs  modulators.rs  synthesizers.rs  transport.rs  voices.rs
src/entities/: infra.rs  mod.rs
src/entities/built_in/: factory.rs  mod.rs
src/entities/built_in/controllers/: arpeggiator.rs  lfo_controller.rs  mod.rs  passthrough.rs  timer.rs  trigger.rs
src/entities/built_in/effects/: bitcrusher.rs  chorus.rs  compressor.rs  delay.rs  gain.rs  limiter.rs  mod.rs  reverb.rs
src/entities/built_in/effects/filter/: mod.rs
src/entities/built_in/instruments/: drumkit.rs  fm.rs  mod.rs  sampler.rs  subtractive.rs
src/entities/simple/: controllers.rs  effects.rs  factory.rs  instruments.rs  mod.rs
src/entities/test_entities/: controllers.rs  effects.rs  factory.rs  instruments.rs  mod.rs
src/orchestration/: basic_project.rs  bus.rs  humidity.rs  midi_router.rs  mod.rs  orchestrator.rs  project.rs  repositories.rs  track.rs  traits.rs  util.rs
src/types/: channels.rs  colors.rs  general_midi.rs  midi.rs  mod.rs  note.rs  numbers.rs  queues.rs  ranges.rs  time.rs  uid.rs
src/util/: channels.rs  library.rs  midi.rs  mod.rs  mod_serial.rs  paths.rs  rng.rs  selection_set.rs  settings.rs
test-data/samples/: this-file-exists-only-in-test-data-samples.txt
tests/: automation.rs  aux_bus.rs  entity_validator.rs  integration.rs  sidechain.rs  song_editing.rs  song_programming.rs  subtractive-patch-explorer.rs
