[package]
name = "ensnare-services"
description = "Wrappers around third-party crates that make them easier to use with crossbeam channels."
version = "0.0.2-alpha.2"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.86"
cpal = { version = "0.15.3", optional = true }
crossbeam = "0.8.4"
delegate = "0.12.0"

[dev-dependencies]
anyhow = "1.0.86"
derivative = "2.2.0"
clap = { version = "4.5.4", features = ["derive"] }

[features]
default = ["audio"]
audio = ["dep:cpal"]

[[example]]
name = "audio"
required-features = ["audio"]
