[package]
name = "ensnare-services"
description = "Wrappers around third-party crates that make them easier to use with crossbeam channels."
version = "0.0.6"
readme = "README.md"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.86"
cpal = { version = "0.15.3", optional = true }
crossbeam = "0.8.4"
delegate = "0.12.0"
ensnare = { version = "0.0.2-alpha.13", path = "../.." }
midir = { version = "0.10.0", optional = true }
midly = { version = "0.5.3", optional = true }

[dev-dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
derivative = "2.2.0"

[features]
default = ["audio", "midi", "std"]
audio = ["dep:cpal"]
midi = ["dep:midir", "dep:midly"]
std = []

[[example]]
name = "audio"
required-features = ["audio"]

[[example]]
name = "midi"
required-features = ["midi"]
